# python-project-template

./: LICENSE  MANIFEST.in  README.md  init_project.py  mkdocs.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: bumpver-minor.yml  bumpver-patch.yml  ci-master.yml  ci.yml
docs/: generate_reference_docs.py
