[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "${PROJECT_NAME}"
version = "0.0.1"
requires-python = ">=3.8"

description = ""

authors = [
    {name =  "${USER_FULL_NAME}"   , email =  "${USER_MAIL}"}]

maintainers = [
    {name =  "${USER_FULL_NAME}"   , email =  "${USER_MAIL}"}] 


readme = "README.md"
license = { text="Apache License 2.0"}

keywords = []

classifiers = []

dependencies = ['mkdocstrings[python]>=0.18', 'mkdocs-material', 'bumpver', 'mkdocs', 'mkdocs-gen-files', 'mkdocs-literate-nav', 'Pygments>=2.12']

[project.urls]
"GitHub" = "https://github.com/${USERNAME}/${PROJECT_NAME}"
"Documentation" = "https://${USERNAME}/.github.io/${PROJECT_NAME}/"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Update version: {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    'current_version = "{version}"',
]
"${PROJECT_NAME}/__init__.py" = [
    '__version__ = "{version}"',
]